--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ footer a:hover {
     left: 0; 
     right: auto; 
     top: 0;
-    background: rgba(255, 230, 0, 0.95);
+    background: rgba(255, 230, 0, 0.9);
     color: black;
     display: flex;
     flex-direction: column;
@@ -134,7 +134,7 @@ footer a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 
 .overlay-content {
@@ -142,7 +142,7 @@ footer a:hover {
     max-width: 90%; 
     margin-left: 5px;
     font-size: 14px;
-    z-index: 2; 
+    z-index: 1; 
 }
 
 .overlay-header-link {
@@ -154,6 +154,11 @@ footer a:hover {
 
 footer {
     position: relative;
-    z-index: 2; 
+    z-index: 1; 
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: #FFC107;
 }
 
