--- a/style2.css
+++ b/style2.css
@@ -114,8 +114,8 @@ nav a:hover {
 }
 
 .image-column a:hover img {
-    filter: blur(5px); /* Blur effect */
-    transform: scale(1.15); /* Slight zoom */
+    filter: blur(5px);
+    transform: scale(1.15); 
 }
 
 .image-column a span {
@@ -127,12 +127,12 @@ nav a:hover {
     font-size: 16px;
     text-align: center;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
-    opacity: 0; /* Hidden by default */
-    transition: opacity 0.3s ease; /* Smooth fade-in */
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
 }
 
 .image-column a:hover span {
-    opacity: 1; /* Show text on hover */
+    opacity: 1; 
 }
 
 
@@ -145,8 +145,6 @@ footer {
     display: flex;
     justify-content: left;
     gap: 20px;
-    
-    z-index: 1000;
 }
 
 footer a {
@@ -157,4 +155,5 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+    color: #FFC107;
 }
