--- a/style3.css
+++ b/style3.css
@@ -35,12 +35,6 @@ header {
     display: inline-block;
 }
 
-.header-link:visited,
-.header-link:active {
-    text-decoration: none;
-    color: inherit;
-}
-
 strong {
     font-weight: 700;
 }
@@ -89,74 +83,78 @@ nav a:hover {
 }
 
 
+
 .image-grid {
     position: absolute;
-    top: 0;
+* EACH IMAGE + TEXT GROUP (FLEX CONTAINER) */    top: 0;
     right: 0;
     width: 50%;
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
-    /*row-gap: 5px;*/
-    /*margin: 100px 50px 100px ;*/
+    grid-template-rows: repeat(2, auto); 
+    column-gap: 20px; 
+    row-gap: 30px;
     padding: 50px;
 }
 
-.image-grid a {
-    text-decoration: none;
-    color: inherit;
-    position: relative;
-    display: block;
-    width: 55%;
-    height: auto;
-    text-decoration: none;
+/
+.grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 
-.image-grid img {
-    width: 360px;
+.grid-container img {
+    width: 348px;
     height: 327px;
     object-fit: cover;
     transition: filter 0.3s ease 0.2s, transform 0.3s ease 0.2s;
     display: block;
-    border-radius: 2px;
-    z-index: -1;
+    border-radius: 5px;
 }
 
 
-
-.image-grid a:hover img {
+.grid-container a:hover img {
     filter: blur(5px);
     transform: scale(1.1);
 }
 
-.image-grid p {
-    margin-top: 10px; 
-    font-size: 14px;
-    font-style: italic;
+
+.grid-container p {
+    margin-top: 8px; 
+    font-size: 12px;
     width: 80%; 
     line-height: 1.3;
-    z-index: 2;
+    text-decoration: none !important;
+    color: inherit;
 }
 
-.image-grid a span {
+
+.grid-container a span {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-20%, -200%);
+    transform: translate(-50%, -50%);
     color: white;
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 10);
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+    background: rgba(0, 0, 0, 0.6);
+    padding: 8px 12px;
+    border-radius: 5px;
     opacity: 0;
-    transition: opacity 0.3s ease 0.2s; 
-    width: 80%;
+    transition: opacity 0.3s ease 0.2s;
+    width: auto;
 }
 
-.image-grid a:hover span {
+
+.grid-container a:hover span {
     opacity: 1;
 }
+
 
 
 footer {
@@ -181,5 +179,4 @@ footer a:hover {
     text-decoration: underline;
     color: #FFC107;
     cursor: pointer; 
-    display: inline-block;
 }
