--- a/style3.css
+++ b/style3.css
@@ -124,9 +124,10 @@ nav a:hover {
 
 
 .grid-container p {
+    font-style: italic;
     margin-top: 8px; 
-    font-size: 12px;
-    width: 80%; 
+    font-size: 14px;
+    width: 50%; 
     line-height: 1.3;
     text-decoration: none !important;
     color: inherit;
@@ -155,6 +156,10 @@ nav a:hover {
     opacity: 1;
 }
 
+.grid-container a {
+    text-decoration: none; 
+    color: inherit; 
+}
 
 
 footer {
